# PTU-PAYGO-OpenAI-Simulator

./: .gitignore  COMPLETE_ANALYSIS_GUIDE.md  EXTRACTION_SUMMARY.md  README.md  SETUP_AZURE_ANALYSIS.md  USAGE_EXTRACTION_GUIDE.md  analyze_azure_logs.sh  azure_openai_usage.csv  azure_usage_30days.csv  azure_usage_november.csv  batch_analyze_models.py  download_azure_logs_parallel.py  download_azure_logs_parallel_fixed.py  download_azure_usage.py  download_azure_usage_alt.py  extract_azure_usage.py  extract_usage_from_logs.py  monitor_50workers.sh  monitor_progress.sh  pyproject.toml  quick_extract.py  run.py  run_batch_analysis.sh  sample_log.json  test_system.py  wait_for_completion.sh
PTU-PAYGO-OpenAI-Simulator/PTU-PAYGO-OpenAI-Simulator/: GET_REAL_TOKEN_DATA.md  OPTIMIZATION_ANALYSIS.py  PROCESSING_RUNS_HISTORY.md  PROCESSING_STATUS.md  QUICK_REFERENCE.md  QUICK_REFERENCE.txt  README_AZURE_LOGS.md  app.py  app_old.py  batch_analyze_by_model_version.py  batch_ptu_analysis.py  convert_azure_logs.py  data_processing.py  download_azure_logs.py  hello.py  pricing.py  ptu_calculations.py  recurring_status.sh  run_complete_analysis.sh  status.sh  utils.py
